# backend/storage/api-docs/api-docs.json
@@ -35,6 +35,24 @@
                         }
                     },
                     {
+                        "name": "searchText",
+                        "in": "query",
+                        "description": "search data",
+                        "required": false,
+                        "schema": {
+                            "type": "text"
+                        }
+                    },
+                    {
+                        "name": "sortField",
+                        "in": "query",
+                        "description": "sorting field",
+                        "required": false,
+                        "schema": {
+                            "type": "text"
+                        }
+                    },
+                    {
                         "name": "from",
                         "in": "query",
                         "description": "Start date for filter",
